tests/fixtures/invalid/list_gt_set.py
# Cannot compare with > List[int] and Set[int]
x: bool = [1, 2, 3] > {1, 2, 3}
